--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -16,6 +16,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716629.md#1" target="_blank">禁自带骨灰盒 湖南殡仪馆自卖逾万元一个</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716629.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-12-150x120.jpg" align ="left"></a>日前，湖南宁乡市殡仪馆禁止死者家属自带骨灰盒，推销殡仪馆标价14,880元（人民币，下同）的骨灰盒。死者家属如果不买殡仪馆的骨灰盒，殡仪馆就不提供相关服务。网民纷纷指责殡仪馆：大发死人财。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716409.md#1" target="_blank">贵州贫困县举债22亿元 造山寨“紫禁城”</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716409.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/111-150x120.gif" align ="left"></a>贵州一个国家级贫困县举债22亿（人民币，下同）、历时4年，打造一座“山寨版紫禁城”，官媒称，该县债务达400多亿元。网民质疑工程有官商中饱私囊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11714758.md#1" target="_blank">加拿大国会特别委员会成立 审查加中关系</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11714758.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5df0543ec6c22-150x120.jpg" align ="left"></a>联邦保守党外交评论员、众议员奥图尔（Erin O'Toole）周二（12月10日）呼吁特鲁多政府拿出实质行动来处理加中关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724685.md#1" target="_blank">北京发大雾黄色预警 局地能见度低于500米</a><br></h3>据北京市气象局官网消息，今早（16日）8时，北京市发布大雾黄色预警，且多个地区下雪，其中延庆最大降雪已经达到了7.3毫米。受天气影响，首都机场已取消140架次航班。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11724326.md#1" target="_blank">《延禧》女星拔火罐出意外 后背手臂被烧烂</a><br></h3>曾在《延禧攻略》剧集中饰演“魏璎珞”之姊“魏璎宁”的大陆女星邓莎，12月14日在微博发文透露，日前工作结束后到SPA（拉丁文“Solus Por Aqua”的简写，美容店）店做拔火罐，没想到发生意外。在她晒出的照片中，她的后背和手臂被严重烧伤，伤口触目惊心，消息一度登上热搜榜首。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723449.md#1" target="_blank">陕西工人遭欠薪申请仲裁 人社局称人手不足拒绝</a><br></h3>陕西榆林子洲县三丰油脂公司讨薪工人到当地人社局申请仲裁，却收到劳动争议仲裁厅“人员不够，不受理案件”的回复文书，近日，这份半年前开出的“不予受理案件通知书”在网上曝光，引发争议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 3:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723514.md#1" target="_blank">山西女子修脚店拔肉刺被收费4.6万元</a><br></h3>近日，山西孝义市民郭先生的妻子因脚底长肉刺去修脚店治疗，拔一根肉刺10元，最后竟花费4.66万元。郭先生怀疑被骗，店主称拔出后当场数，至于是不是拔出4660根则不清楚。最后经调解，店方退回4万多元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:26 PM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/12/n11717330.md#1" target="_blank">日本正品告输中国山寨版 无印良品上诉失败</a><br></h3>中国再现山寨版吿赢原创品牌案。北京高院近日做出最终判决，判日本无印良品败诉，并责令其不但要删除纺织类商品上的“无印良品”商标，还须赔偿原告（北京无印良品）62.5万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/12/n11717468.md#1" target="_blank">河南安置房一敲就碎 民众：谁敢收房住进去？</a><br></h3>近日，河南郑州金水区小贺庄村安置房，被村民发现是豆腐渣工程——磁砖一碰就掉、梁柱混凝土破碎掉落等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11715794.md#1" target="_blank">台旅行社勾结人头协会 5千陆公务员非法来台</a><br></h3>?国安恐再现漏洞？台北地检署指出，新北市水资源经济发展协会等12个机构，涉嫌勾结20余家非甲种旅行社业者，假造短期专业交流文件，协助5千名中国公务人员及其亲友来台，但实际目的尚在调查中；刑事局今日（11日）兵分5路搜索，并约谈相关10人，预计晚间移送复讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:36 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713953.md#1" target="_blank">关押两名加国人一年后 中共称其被审查和起诉</a><br></h3>中共当局最近明里暗里威胁西方国家，很快会以危及中共国家安全罪名，对被其关押的两名加拿大公民——加拿大前外交官康明凯（Michael Kovrig） 和加拿大商人斯帕沃尔（Michael Spavor）进行审判。外界一致认为，中共这么做，是向加拿大施压释放华为高管孟晚舟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nhrnni253/djy/blob/master/gb/ncid282_2.md#1<br><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nhrnni253/djy/blob/master/gb/ncid282_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_2.htm">http://www.epochtimes.com/gb/ncid282_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
