--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -26,8 +26,16 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728647.md#1" target="_blank">手工艺术大荟萃 德国圣诞市场上的精品</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728647.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/76ed2d990a39fbaf949cba916f035e7f-150x120.jpg" align ="left"></a>俗话说，会看的看门道。要说德国圣诞市场上值得保存的精品，就属那些精致独特的手工艺品了。今天我们就来稍作盘点，当然一定会挂一漏万，因为德国的手工艺品实在很丰富，我们就先从最著名的木制手工艺生产基地——埃尔茨山区开始介绍吧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727783.md#1" target="_blank">用1个枕头就能做的燃脂运动！一边看电视一边瘦</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/pillow-fitness-44-150x120.jpg" align ="left"></a>圣诞节、元旦、农历新年??随着冬季到来，一个又一个的节假日接踵而至。每天辛苦工作，放假最想做的就是躺在沙发上看电视、大啖美食犒赏自己，不过又怕多吃少动会变胖。不妨趁着看电视的时间，用一个枕头做简单的燃脂运动。不用花大钱去健身房、买健身器材，世界健身俱乐部（World Gym）教练Xin教你边看电视就能边瘦身。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11722572.md#1" target="_blank">他从画里跑出来？摄影师苦心守候拍出奇妙佳作</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11722572.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/30d201aec61204b1951d0fa2ce955cf0-150x120.jpg" align ="left"></a>游客到美术馆大多是为了欣赏艺术品而来的，但奥地利摄影师斯蒂芬?德拉桑（Stefan Draschan）和别人不一样；他却是为了欣赏 艺术品的游客而来的，他这一系列别有风味的作品，看起来即奇妙又有趣！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:36 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11722606.md#1" target="_blank">搭乘全球第一架无塑班机 喝完咖啡也要吃掉咖啡杯</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11722606.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5a9fa6784eeb19b61df8f3f6ce447b13-150x120.jpg" align ="left"></a>如果你搭乘纽西兰航空（Air New Zealand），端上来一杯香醇的咖啡时，空服员可能会告诉你，喝完咖啡，可以的话，请一起把咖啡杯吃掉吧！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:11 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728098.md#1" target="_blank">小米香肠：雾台部落的回忆</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728098.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019121_shouhuihsu_rice-roll_01-150x120.jpg" align ="left"></a>杜瑞龙在雾台部落中算是顶尖人物，从他家摆饰的兽骨即可略知一二，他的头饰还有雄鹰的利爪，说起早年徒手抓雄鹰的过程，他还特地穿上原住民服饰，抓着雄鹰留下历史镜头，就怕日后说起这段经历没人愿意相信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:01 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/20/n11734309.md#1" target="_blank">汽车维修问与答：换阀盖垫圈不导致大问题</a><br></h3>汽车维修问与答
+
+读者Frank问：您好，您好！我是Frank，我上周把我的车送去一家维修车行更换阀盖垫圈，因为我的车最近一直都在这里维修保养的。可是换了阀盖垫圈后我都还没有取车开走，车行老板说这个车发动机出问题了，要更换一个二手发动机，估计费用要$10,000-12,000加元。我这几天都蒙了，不知道怎么办了？因.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:29 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/20/n11734300.md#1" target="_blank">为什么要用电动汽车？</a><br></h3>
+
+1)?电动汽车更容易负担
+
+尽管新型的电动汽车比相应的汽油汽车价格要高，但是长期而言，几乎可以保证最终电动汽车会更省钱。全国各地的驾驶员每天通勤可以通过驾驶电动汽车，而不是汽油车来节省开支，这已经不是什么秘密了。在5年的时间里，平均每个驾驶员将节省4,000至5,000美元的燃油成本。
+
+&nbsp;.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:17 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11732455.md#1" target="_blank">快餐不利健康 鹿特丹拟限制店家数量</a><br></h3>为了对抗肥胖，减少肥胖人口比例，帮助当地居民改善健康状况，荷兰鹿特丹市政府拟对本市快餐店的数量进行限制，重点限制范围是城市中心区域。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nhrnni253/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nhrnni253/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008.htm">http://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
