--- a/gb/ncid280_2.md
+++ b/gb/ncid280_2.md
@@ -16,7 +16,7 @@
 该盟锡林浩特市宝力根苏木希日塔拉嘎查一位不愿透露姓名的村民向大纪元记者透露，当地八九月老鼠就已经多起来了。
 
 “老鼠是今年突然特别多，我们这八九月份开始多起来，六七月份时是其它地方多，还没有到我们这，一片一片地多起来了。在野地里.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/7/n11706911.md#1" target="_blank">遂宁小区疑似一氧化碳中毒事故 2死7住院</a><br></h3>12月8日，四川遂宁市安居区凤凰街道某小区发生一氧化碳中毒事件，导致2死、7人身体不适，已在医院救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/22/n11674617.md#1" target="_blank">鼠疫慌 京蒙之间设三道防线 河北现“通知”</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/22/n11674617.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/EJ7uJQMUYAAz_e2-150x120.jpeg" align ="left"></a>内蒙、甘肃等地早些时间已爆发鼠疫，但当局掩盖真相，人心惶恐。目前内蒙已接近草木皆兵，车站、火车站、机场、医院都要检查体温。有网上消息称，目前很多村庄已经被完全封锁，村民不许进出，村庄通讯也遭切断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 3:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/7/n11707059.md#1" target="_blank">兰州兽研所布鲁氏菌阳性人数增至96人</a><br></h3>目前，中国农业科学院兰州兽医研究所布鲁氏菌阳性人数已增至96人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/6/n11705039.md#1" target="_blank">佛山山火持续24小时 火势随风力加大蔓延</a><br></h3>12月5日13时53分，广东省佛山市高明区荷城街道凌云山发生山火，大火烧了整整一天（24小时），到6日火势扩大，目前火还没有灭并随风力加大蔓延。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/6/n11704994.md#1" target="_blank">黔高速37车连环撞23人伤 有人颅脑损伤</a><br></h3>12月6日上午8时20分左右，遵蓉高速公路（贵州遵义至四川成都）在遵义习水县路段，疑因大雾和路面结冰湿滑等原因，导致37车连环追撞，至少23人受伤送院，有人重度颅脑损伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:01 PM							</td></tr>
