--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -20,9 +20,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/25/n11680494.md#1" target="_blank">汪峰晒照为大女儿庆生 章子怡直呼继女为宝贝</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/25/n11680494.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/VCG111175203321_meitu_1-150x120.jpg" align ="left"></a>大陆女星章子怡与歌手汪峰结婚后，育有三岁的女儿“醒醒”，上月，她在东京电影节上宣布怀二胎喜讯。11月25日，汪峰在微博晒照为与前妻所生的大女儿庆生，并寄语14岁的“熙熙”能“像子怡妈妈那样无畏又美丽”。章子怡在送祝福时也不禁直呼：“生日快乐，熙熙宝贝！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 7:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/25/n11680256.md#1" target="_blank">江苏南通“优质工程”小区新房现满墙裂缝</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/25/n11680256.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15da7de01b468ad3_ttl7dayxg5_VCG111260893154-150x120.jpg" align ="left"></a>江苏南通一小区的200多户业主买的精装修新房，出现了屋顶裂开、满墙裂缝、漏水等大大小小十几个质量问题。而开发商却称这是“普遍存在的质量问题”，并以“过保修期”为由一直不予维修。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 4:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/22/n11673100.md#1" target="_blank">《烈火战车》影评：奥林匹克中的信仰之光</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/22/n11673100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/COF-20-1200x800-150x120.jpg" align ="left"></a>故事背景是在第一次世界大战之后，像其它讲述历史重要时期的作品一样，这部影片也经受了时间的考验，即便现在观看，也不觉得过时。而且，《烈火战车》如雷轰顶般地提醒着我们什么是生命中重要的东西。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:35 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/25/n11678915.md#1" target="_blank">王立强的间谍老板 向心及龚青离台时被约谈</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/25/n11678915.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1bb7b1fc92f949c620fb1c740b178c11-150x120.jpg" align ="left"></a>香港上市公司“中国创新投资(01217.HK)”执行董事、主席兼行政总裁向心和替任董事龚青，因被投诚澳洲的中共特工王立强指为中共从事间谍活动，被调查局桃园市调查处发出通知书，要求就新闻报道事宜配合调查，两人已聘请台湾律师提供协助。
-
-自称是中共特工的王立强，10月向澳洲反间谍机关投诚，澳洲媒体23日刊出其访谈。王立强说，他以中央军事委员会联合参谋部创建的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:16 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/2/n11694217.md#1" target="_blank">每日三退声明精选（2019/12/01）</a><br></h3>我没有修炼法轮大法，但看过一遍《转法轮》，知道法轮大法好，炼法轮功的人都是些好人，共产党迫害法轮功学员，打死、打残、打伤那么多好人，真是罪恶滔天。我早就不相信共产党了，它的本性就是假、恶、斗。我郑重声明：退出红小兵和少先队组织！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/1/n11692656.md#1" target="_blank">长沙男子长期熬夜致心衰竭 心脏功能仅剩35%</a><br></h3>湖南长沙市民李先生今年刚满31岁，平时热衷熬夜打游戏，经常凌晨两三点后才睡觉。最近，他感到胸口憋闷并咳嗽，于是前往医院就诊。经检查，李先生被确诊为心衰。医生表示，李先生的心脏功能只剩下35%左右，不到正常人的一半。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 3:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/1/n11692564.md#1" target="_blank">疑酒店毛巾致感染 昆明老人睫毛长上百只螨虫</a><br></h3>近日，云南昆明75岁的老人陈凤（化名）由于眼睛出现干、痒、流泪的症状前往医院检查。医生发现，她的双眼睫毛内寄生了大量蠕形螨，粗略估算总数量达上百余只。医生判断，这可能是陈女士在出差过程中使用了酒店的毛巾，从而引起了眼部螨虫感染。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 2:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/30/n11691222.md#1" target="_blank">广西一患者右肾取石 医生在左腰开刀</a><br></h3>本月中旬，广西北海人民医院发生一起医疗事故。患者刘先生接受全麻下右肾取石手术，没想到，主刀医生弄错了手术部位，却开到腰部左侧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:12 PM							</td></tr>
