--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -31,7 +31,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/4/n11700632.md#1" target="_blank">唐代女子死后还阳 与母亲一同升仙</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/4/n11700632.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/09/1609110053182357-150x120.jpg" align ="left"></a>唐代尚书郎韦蒙之妻许氏服侍公婆至孝，真心修行。许氏曾跟人家说起：“老许家每代都有神仙，都成为上天高真，受到天帝重任。”后来她女儿死后又还阳复生，证实了天国是真的存在，不久母女一起升天。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 4:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11709836.md#1" target="_blank">水的归属</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11709836.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/180227015026100093-150x120.jpg" align ="left"></a>上天恩赐的水源，滚滚浊水阳光下闪着银光，奔流河川，灌注辽阔田地，恩养世代子民，是岛屿农乡的血脉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/9/1/n11491897.md#1" target="_blank">【医案】五里迷雾</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/9/1/n11491897.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190813024731100093-150x120.jpg" align ="left"></a>现代医学随着科技的发达，把疾病的病因、发展过程、愈后都研究得有条有理，医学浩瀚，可是就有不按医理进展的病情，是不是医学遗漏了什么重要物质？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 10:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/7/12/10/n1937466.md#1" target="_blank">艺术的时空之旅（八）传统油画技法探究（一）</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/7/12/10/n1937466.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/201910231-150x120.jpg" align ="left"></a>针对已有相当的基本功的画家而言，在创作过程中的种种技法应该自由、灵巧地运用，而不应被已形成的技法框框阻碍住自我的主念。因为在表现美好光明的道路上，技法是为真正的艺术而创造的，而不应该以技法为主从而阻碍艺术家对艺术的表达。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:49 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716173.md#1" target="_blank">五律：黄昏</a><br></h3>寒鼓夕阳阔，落霞天际悠。 飞鸿成一点，逝景合长流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713631.md#1" target="_blank">五绝：证悟</a><br></h3> 念出妖魔灭，神威止恶凶。 善行千万里，入定一棵松。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711109.md#1" target="_blank">虞美人．忧</a><br></h3> 严冬万木萧疏处，一片忧伤度。 干枯栎叶不离枝，但有风来声瑟感心知。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711098.md#1" target="_blank">七律：陀螺</a><br></h3> 河冰初厚打陀螺， 鞭子抡圆脆响多。 嬉戏之人求热汗， 飞旋螺哨送欢歌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:13 PM			</td></tr>
