--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -22,14 +22,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725021.md#1" target="_blank">洪微：美军测试中程导弹震慑中共</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725021.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190818-D-ZZ999-221-600x400-150x120.jpg" align ="left"></a>12月12日，美军在加利福尼亚州的范登堡空军基地，测试了一种常规配置的陆基（地面发射）弹道导弹。这是美国8月份退出《中导条约》后，第二次测试中程导弹，也是首枚弹道导弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 12:59 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724859.md#1" target="_blank">谢田：中南海何苦悄悄的投石问路</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724859.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1079499936-150x120.jpg" align ="left"></a>美国宾夕法尼亚大学国际关系和中国历史学教授、中国问题专家林蔚博士（Arthur Waldron）披露，一名与习近平关系密切的高层幕僚透露，中共内部已经清楚的知道：“我们已经走投无路。”这是英文《大纪元》记者杨杰凯（Jan Jekielek）在“美国思想领袖”节目的专访中，林蔚给出的讯息，他认为中共非常清楚自身已死到临头.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:52 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724853.md#1" target="_blank">夏祷：愿荣光归台湾（上）</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724853.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1483017840901-1-600x400-150x120.jpg" align ="left"></a>去年双十清晨，台湾总统府后出现了完美的双彩虹。一个月后，阳明山上再度出现了双彩虹，长达九小时。这一道双彩虹已进入金氏世界纪录。据说，彩虹是上帝誓约的记号。在《创世纪》中，大洪水后，上帝指着天上的彩云对诺亚立下了誓约。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:46 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729699.md#1" target="_blank">理悟：天开眼</a><br></h3>宇宙更新天体明
-众神聚焦察民情
-凭空云启开天眼
-港民抗暴惊天庭
-驱除共党合天意
-还我香港民心凝
-正义自有苍天助
-共匪横行看报应......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:35 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11724618.md#1" target="_blank">【名家专栏】弹劾川普决议条款“苍白无力”</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11724618.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1187544966-webcrop-700x420-150x120.jpg" align ="left"></a>我认识的一个记者看到众议院的弹劾决议条款草案后，称之为“苍白而无力”， 我觉得这是一个很好的评价。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/6/n11706337.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（9）</a><br></h3>一般把推理看作是“使用理智从某些前提产生结论”的行动。按照亚氏逻辑学的观点，前提和结论都是用判断或命题，推理是把判断或命题按照理智的方式连接起来。判断或命题是把词或概念用一些词（如关系词“BE”）连接起来。理智在亚氏逻辑学中，一般理解为符合理性行为公理，如不循环（传递性）、不矛盾（一致性）等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 10:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727270.md#1" target="_blank">夏祷：愿荣光归台湾（下）?</a><br></h3>2014年，台湾、香港先后发生了太阳花运动和占中运动。学生们攻入立法院，坐上了议场主席台，在国父孙中山先生画像下高悬占领立法院的天数。太阳花学运最终促使台湾搁置了两岸服贸协议，延缓了中共企图通过贸易对台湾的深层渗透。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727243.md#1" target="_blank">洪微：英超球星也遭中共封杀</a><br></h3>美国NBA被中共封杀的事件，余音还在，欧洲又起波澜，著名足球明星梅苏特·厄齐尔（Mesut ?zil）也遭到中共封杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:52 PM			</td></tr>
